# base

./: .gitignore  hello  hello_world.cpp  hello_world.h  main.cpp
.github/workflows/: trigger-hw1-tests.yml  trigger-tests.yml
lab2/: CMakeLists.txt  lab2_problem1.h  lab2_problem1_solution.cpp  main  main.cpp
lab2/tests/: lab2_problem1_test.cpp  test_main.cpp
